--- a/七牛云议题.md
+++ b/七牛云议题.md
@@ -77,4 +77,4 @@
      - 因为所选用的模型为开源模型[混元](https://github.com/Tencent-Hunyuan/Hunyuan3D-2.1/tree/main#)，可以部署在公司/服务商的服务器上，一次部署即可无限享用api调用。
 
 
-
+视频链接:[b站](https://b23.tv/I5zR6oU)
